# simsity

./: .flake8  .gitignore  .gitpod.Dockerfile  .pre-commit-config.yaml  .pyre_configuration  404.html  LICENSE  Makefile  README.md  app.py  benchmark.ipynb  demo.ipynb  demo.py  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml  text-example.ipynb  untitled.py  votes-example.ipynb
.github/workflows/: style.yml  unittest.yml
api/: index.html
api/datasets/: index.html
api/indexer/: index.html
api/preprocessing/: index.html
api/service/: index.html
docs/: api.md  index.md
docs/api/: datasets.md  indexer.md  preprocessing.md  service.md
docs/guides/: dedup.md  index.md
docs/quickstart/: cool.md  dedup.md  index.md
examples/: benchmark.ipynb  king_queen_build.py  king_queen_load.py  text-example.ipynb  text-widget-example.ipynb  votes-example.ipynb
guides/: index.html
guides/dedup/: index.html
nbs/: __init__.py  build.py
quickstart/: Untitled.ipynb  index.html  pretty-chart.json
quickstart/cool/: index.html
quickstart/dedup/: index.html
scripts/: demo-annoy.py  demo-pynn.py
search/: search_index.json
simsity/: __init__.py  datasets.py  error.py  preprocessing.py  serve.py  service.py  widgets.py
simsity/indexer/: __init__.py  annoy.py  common.py  lshforest.py  nmslib.py  pynn.py
simsity/preprocessing/: __init__.py  _columngrab.py  _columnlist.py  _identity.py  (+2 more)
tests/: conftest.py  demo.py  test.py  test_base.py  test_components.py  test_docs.py  test_errors.py  test_indexer.py  test_service.py  test_smoke.py  test_web.py
(+3 files in other folders)
